[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inquirer-rhy"
version = "0.1.3"
description = "inquirer in modern python3"
authors = [ "Rhythmicc <rhythmlian.cn@gmail.com>",]
license = "MIT"
readme = "README.md"

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
path = "/opt/homebrew/lib/python3.10/site-packages/"
port = "22"

[tool.poetry.dependencies]
python = "^3.7"
Pygments = ">=2.2.0"
prompt-toolkit = ">=3.0, <3.1.0"

[tool.qpro.config]
build = ""
entry_point = ""
executable = "python3 main.py"
input_file = ""
template_root = ""
enable_complete = true
